# pico4u-vr-sleep-workaround

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pico4u_config.json  pnpm-lock.yaml  tauri.conf.json
.github/: README_ja.md
.github/workflows/: frontend-lint.yml  release.yml
capabilities/: default.json
frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  i18n.ts  main.tsx  style.css  vite-env.d.ts
frontend/src/components/: ConnectionPanel.tsx  DeviceChecking.tsx  HowToSection.tsx  Logs.tsx  MainView.tsx  ModeSelection.tsx  Settings.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useAppLogic.ts  useTheme.ts
icons/: icon.icns
scripts/: download_icons.ps1  generate_icons.ps1  setup_adb.ps1  sync-version.mjs
src/: commands.rs  config.rs  main.rs  state.rs
