[package]
name = "pico4u-vr-sleep-workaround"
version = "0.1.0-rc2"
description = "Keep Pico 4 Ultra awake"
authors = ["ryium"]
license = "MIT"
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.43"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
